# lexicon_bot

./: Dockerfile  README.md  README.rst  pyproject.toml
lexicon_bot/: lexicon_bot.py  lexicon_bot_utils.py
tests/: test_lexicon_bot.py
